--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,6 @@ html {
 }
 
 .page {
-  position: relative;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -51,11 +50,9 @@ ol {
 }
 
 .content {
-  position: absolute;
-  top: 133px;
-  left: 30px;
   display: flex;
   align-items: end;
+  margin: 133px 30px;
   gap: 30px;
 }
 
@@ -167,7 +164,7 @@ ol {
 
 .search-form__pseudo-checkbox::before {
   content: '';
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -246,7 +243,7 @@ ol {
 
 .content__list {
   max-height: 297.5px;
-  overflow: scroll;
+  overflow: auto;
   position: relative;
 }
 
