--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,6 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
- 
 }
 
 h1,
@@ -80,7 +79,7 @@ ol {
   justify-content: space-between;
   align-items: end;
   gap: 35px;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: inherit;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -97,7 +96,7 @@ ol {
 
 .search-form__fieldset-title {
   line-height: 21.6px;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: inherit;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
@@ -189,7 +188,7 @@ ol {
 .button {
   box-sizing: border-box;
   background: transparent;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: inherit;
   font-size: 18px;
   font-weight: 700;
   line-height: 22px;
