--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,6 @@ ol {
   list-style: none;
 }
 
-
 .visually-hidden {
   position: absolute;
   inline-size: 1px;
@@ -63,6 +62,7 @@ ol {
 }
 
 .result__video-container {
+  position: relative;
   width: 711px;
   height: 386px;
 }
@@ -80,10 +80,9 @@ ol {
   align-items: end;
   gap: 35px;
   font-family: inherit;
-  font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 130%;
 }
 
 .search-form__fieldset {
@@ -95,11 +94,16 @@ ol {
 }
 
 .search-form__fieldset-title {
-  line-height: 21.6px;
   font-family: inherit;
-  font-size: 18px;
+  font-size: inherit;
   font-weight: 400;
-  line-height: 22px;
+}
+
+.search-form__label {
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+  cursor: pointer;
 }
 
 .search-form__label:focus {
@@ -112,7 +116,7 @@ ol {
 }
 
 .search-form__textfield {
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(255, 255, 255);
   width: 224px;
   font-family: inherit;
   font-style: inherit;
@@ -126,18 +130,14 @@ ol {
   appearance: none;
   border-top: 1px solid white;
   border-bottom: 1px solid white;
+  border-left: 1px solid transparent;
   padding-left: 0px;
   padding-top: 2px;
-  line-height: 22px;
 }
 
 .search-form__textfield:active {
-  border: 1px solid white;
+  border: 1px solid #fff;
   border-radius: 0;
-}
-
-.search-form__textfield:hover {
-  outline: none;
 }
 
 .search-form__textfield:focus {
@@ -146,30 +146,27 @@ ol {
 
 .search-form__checkbox-list {
   display: flex;
-  gap: 15.7px;
-  padding-bottom: 4.5px;
+  gap: 15px;
+  padding-bottom: 3px;
+  padding-left: 1px;
 }
 
 .search-form__pseudo-checkbox {
   position: relative;
   width: 19px;
   height: 19px;
-  top: 3px;
+  top: 1.5px;
   left: 0px;
   display: inline-block;
   border: 1px solid white;
-  cursor: pointer;
 }
 
 .search-form__pseudo-checkbox::before {
   content: '';
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 14px;
-  height: 14px;
-  border: 7px solid #fff;
+  margin: 1px;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
   display: none;
 } 
 
@@ -177,21 +174,16 @@ ol {
   display: block;
 }
 
-.search-form__label-text:hover {
+.search-form__label:hover .search-form__label-text{
   text-decoration: underline;
-}
-
-.search-form__checkbox-list:focus {
-  outline: none;
 }
 
 .button {
   box-sizing: border-box;
   background: transparent;
   font-family: inherit;
-  font-size: 18px;
+  font-size: inherit;
   font-weight: 700;
-  line-height: 22px;
   text-align: center;
   color: #fff;
   border: 1px solid #fff;
@@ -199,7 +191,7 @@ ol {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  height: 34px;
+  padding: 5px 0;
 }
 
 .button:hover {
@@ -217,7 +209,7 @@ ol {
 
 .button:focus-visible {
   outline: 1px solid #fff;
-  outline-offset: 0.5px;
+  outline-offset: 1px;
 }
 
 .search-form__submit-button {
@@ -230,10 +222,10 @@ ol {
   font-style: normal;
   font-weight: 700;
   font-size: 75px;
-  line-height: 70.5px;
+  line-height: 96%;
   text-transform: uppercase;
   padding-top: 3px;
-  padding-bottom: 22px;
+  padding-bottom: 20px;
 }
 
 .content__accent {
@@ -241,9 +233,9 @@ ol {
 }
 
 .content__list {
-  max-height: 297.5px;
-  overflow: auto;
   position: relative;
+  max-height: 298px;
+  overflow: auto;
 }
 
 .content__list-item {
@@ -256,7 +248,6 @@ ol {
 
 .content__card-link {
   display: block;
-  box-sizing:border-box;
   text-decoration: none;
   color: #fff;
   margin: 2px;
@@ -271,6 +262,7 @@ ol {
 
 .content__card-link:active {
   text-decoration: none;
+  background-color: #545050;
 }
 
 .content__card-link:focus {
@@ -288,7 +280,7 @@ ol {
 }
 
 .content__card-link_current {
-background-color: #545050;
+  background-color: #545050;
 }
 
 .content__video-card-description-container {
@@ -299,10 +291,14 @@ background-color: #545050;
   font-family: 'Oswald', sans-serif;
   font-size: 30px;
   font-weight: 700;
-  line-height: 30px;
+  line-height: 110%;
   text-align: left;
   text-transform: uppercase;
-  padding-top: 3px;
+  padding-top: 2px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 199px;
 }
 
 .content__video-card-thumbnail {
