--- a/styles/style.css
+++ b/styles/style.css
@@ -245,7 +245,8 @@ ol {
 .content__list {
   position: relative;
   max-height: 297px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .content__list-item {
@@ -295,6 +296,7 @@ ol {
 
 .content__video-card-description-container {
   padding-left: 1px;
+  max-width: 185px;
 }
 
 .content__video-card-title {
@@ -308,7 +310,6 @@ ol {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 199px;
 }
 
 .content__video-card-thumbnail {
